# telephone_exchange_sim

./: CMakeLists.txt  Kapcsolat.cpp  Kapcsolat.h  Kapcsolohaz.cpp  Kapcsolohaz.h  datum.cpp  datum.h  elofizeto.cpp  elofizeto.h  elofizetok.txt  ember.cpp  ember.h  kapcs_callback.h  kozpont.cpp  kozpont.h  ktabla.cpp  ktabla.h  main.cpp  string5.cpp  string5.h  testek.cpp  testek.h
